# inference-field-guide

./: .gitignore  .pre-commit-config.yaml  METHODOLOGY.md  README.md  pyproject.toml  requirements-streamlit.txt
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.streamlit/: config.toml
calculator/: __init__.py  app.py  app.py.LEGACY  cli.py  confidence.py  essay_profiles.py  lcpr.py  marimo_app.py  permalink.py  provider_pricing.yaml  readiness.py  view_registry.py  workload_profiles.py
calculator/static/: marimo-theme.css
calculator/tests/: test_cli.py  test_confidence.py  test_derivations.py  test_essay_consistency.py  test_essay_numbers.py  test_goodput.py  test_lcpr.py  test_marimo_app.py  test_permalink.py  test_profiles.py  test_readiness.py  test_trace_to_margin.py  test_view_registry.py
decision-trees/: build_buy_spectrum.md  migration_gate.md  sourcing_patterns.md  vendor_selection.md
evaluation/: README.md  migration_gate.yaml  seven_gate_scorecard.yaml  vendor_comparison.yaml
examples/: dedicated_crossover.md  multi_source_setup.md  run_seeds.py  saas_migration.md  test_seeds.py
history/: 2026-05-18-phase2-HANDOFF.md  2026-05-18-phase2-calculator-marimo-migration.md  2026-05-19-calculator-design-fix-plan.md
journal/: current_state.md
scripts/: build_marimo_to_book.py  bundle_marimo_for_wasm.py  verify_essay.py
scripts/tests/: test_verify_essay.py
streamlit-redirect/: README.md  app.py
templates/: lcpr-worksheet.yaml  migration-readiness-assessment.yaml  migration-readiness-checklist.md  vendor-evaluation-scorecard.yaml
(+18 files in other folders)
