[tool.poetry]
package-mode = false

[project]
name = "inference-field-guide"
version = "0.2.0"
description = "TCO calculator and evaluation tools for production inference architecture decisions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Sohail Mohammad"},
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "streamlit>=1.35",
    "plotly>=5.22",
    "marimo>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
lcpr = "calculator.cli:main"

[tool.pytest.ini_options]
testpaths = ["calculator/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.setuptools.packages.find]
include = ["calculator*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
